Use public link against windows sdk libraries for boost-log windows targets.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -311,7 +311,7 @@ if (WIN32 OR CYGWIN)
         NOMINMAX
         SECURITY_WIN32
     )
-    list(APPEND boost_log_private_libs
+    list(APPEND boost_log_public_libs
         ws2_32
         mswsock
         advapi32
